--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "openai": "^4.73.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.1.0",
+    "remark-gfm": "^4.0.1",
     "stripe": "^17.4.0",
     "zod": "^3.23.8"
   },
